crates/parser/tests/cases/snapshots/cases__errors__for_no_in.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(for_no_in), functions::parse_stmt, true,\n           \"for x:\\n pass\")"

---
error: failed to parse `for` statement
  ┌─ for_no_in:1:6
  │
1 │ for x:
  │      ^ Unexpected token. Expected `in`


